samples/_failures_safe/1761638377_cdd40c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dd94adb.c: In function ‘main’:
./samples/SAFE/__tmp_3dd94adb.c:142:9: error: expected declaration or statement at end of input
  142 |         fprintf(stderr, "Failed to add block 2\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_3dd94adb.c:142:9: error: expected declaration or statement at end of input
